# virta

./: .gitignore  CMakeLists.txt  Doxyfile  FEATURES.md  Field.H  Field1D.H  README.md  Untitled.ipynb  main.cpp  output.npy
docs/html/: Field1D_8H_source.html  Field2D_8H_source.html  Field2D__old_8H_source.html  Field_8H_source.html  Functions_8H_source.html  Range_8H_source.html  annotated.html  classes.html  classvirta_1_1Field-members.html  classvirta_1_1Field.html  classvirta_1_1Field1D-members.html  classvirta_1_1Field1D.html  classvirta_1_1Field1D__coll__graph.map  classvirta_1_1Field1D__inherit__graph.md5  classvirta_1_1Field2D-members.html  classvirta_1_1Field2D.html  classvirta_1_1Field2D__coll__graph.md5  classvirta_1_1Field2D__inherit__graph.map  dir_2b638abc01c8217a99e05e19ced36a25.html  dir_3b1c7ac412cbbf3a0ffdc10cb320a5b6.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_55b783cc01776446fd2540eb95e01c84.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  group__Functions.html  group__Functions_ga696646d187e5e7a79c763e3fe30e630b_cgraph.map  group__Functions_ga696646d187e5e7a79c763e3fe30e630b_cgraph.md5  group__Functions_gaa361d30afe8959e2e5cac84ed3cdfaa0_icgraph.map  group__Functions_gaa361d30afe8959e2e5cac84ed3cdfaa0_icgraph.md5  group__Functions_gadc55a583dbaa3ffa42e4480ba79ee8aa_icgraph.map  group__Functions_gadc55a583dbaa3ffa42e4480ba79ee8aa_icgraph.md5  group__ParallelFunctions.html  group__ParallelFunctions_ga696646d187e5e7a79c763e3fe30e630b_cgraph.map  group__ParallelFunctions_ga696646d187e5e7a79c763e3fe30e630b_cgraph.md5  (+18 more)
docs/html/search/: all_3.js  all_5.js  all_7.js  all_8.js  all_a.js  classes_0.js  classes_1.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
src/: :q  BC.H  BCStruct.H  Field.H  Field1D.H  Field2D.H  FieldView2D.H  Functions.H  Grad.H  Prob.H  Range.H  field.cpp
